fixed buttons on small screens

--- a/public/stylesheets/user-auth-layout.css
+++ b/public/stylesheets/user-auth-layout.css
@@ -219,9 +219,197 @@ body {
 }
 
 /* Portrait and Landscape */
-@media screen 
-  and (device-width: 320px) 
-  and (device-height: 640px) 
-  and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (max-width: 600px) {
+      @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
+
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.form_container-logo-light {
+    font-size: 3rem;
+    color: #553b08;
+    font-weight: 200;
+}
+
+.form_container-logo-bold {
+    font-size: 3rem;
+    color: #553b08;
+    font-weight: 600;
+}
+
+.body_container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.form_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(182, 102, 11, 0.27);
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+        rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    margin-top: 3%;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.form_container-divider {
+    display: flex;
+}
+
+.form_container-demo-button {
+    padding-top: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 1rem;
+    background-color: #eacf86;
+    border-radius: 3px;
+    border: 1px solid #d6d0c4;
+    cursor: pointer;
+    color: #333333;
+    font-weight: 300;
+    font-family: "Lato", sans-serif;
+    font-size: .75rem;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
+        rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+}
+
+.form_container-demo-button-text {
+    margin-left: 5px;
+    text-decoration: none;
+    font-weight: 800;
+    color: #98751a;
+}
+
+.form_container-demo-button:hover {
+    background-color: #ddaf36;
+}
+
+.form_container-form {
+    font-size: 1.5rem;
+    width: 50%;
+    margin-bottom: 1rem;
+}
+
+.form_container-form-title {
+    font-weight: 800;
+    font-family: "Lato", sans-serif;
+    font-size: 2rem;
+    text-shadow:rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.form_container-divider {
+    margin-top: 1rem;
+}
+
+.form_container-divider-text {
+    margin-left: 10px;
+    margin-right: 10px;
+    line-height: 5px;
+    color: rgb(163, 162, 162);
+}
+.form_container-divider-cta {
+    margin-left: 0px;
+    margin-right: 10px;
+    line-height: 5px;
+    color: rgb(163, 162, 162);
+}
+
+.form_container-hr-right {
+    border-right: 100px solid rgb(223, 220, 220);
+    width: 100%;
+    height: 0.5px;
+}
+
+.form_container-hr-left {
+    border-left: 100px solid rgb(206, 203, 203);
+    width: 100%;
+    height: 0.5px;
+}
+
+.form_container-form-input-label {
+    width: 100%;
+    text-align: left;
+    margin-bottom: 0px;
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: #5f5c5c;
+}
+
+.form_container-form-input {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-weight: bold;
+    text-align: left;
+    width: 98.8%;
+    border: 1px solid rgba(149, 145, 145, 0.5);
+    color: rgba(67, 71, 85, 0.27);
+    border-radius: 3px;
+    /* padding-left: 20px; */
+}
+
+.form_container-form-title {
+    text-align: center;
+}
+
+.form_container-form-button {
+    font-family: "Lato", sans-serif;
+    border-radius: 3px;
+    border: 1px solid #335d2d;
+    cursor: pointer;
+    color: rgb(5, 53, 16);
+    background-color: #7ea04d;
+    padding: 5px 7px;
+    font-weight: 800;
+    font-family: "Lato", sans-serif;
+    font-size: .75rem;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
+        rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+    margin-top: 2rem;
+}
+
+.form_container-form-button:hover {
+    background-color: #83b17c;
+}
+
+.form_container-divider-a-text {
+    color: teal;
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+.form_container-divider-a-text:hover {
+    color: #17585a;
+}
+
+.form_container-errors {
+    border: 1px solid rgb(136, 36, 36);
+    background-color: #dba7a7;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
+        rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.form_container-error-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgb(71, 22, 22);
+    padding-left: 1rem;
+}
+
+.form_container-error-li {
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: rgb(71, 22, 22);
+    padding-right: 9px;
+}
 }
